# mlopscasestudy24

./: .gitignore  README.md  client_test.py  docker-compose  pyproject.toml
.aws/: taskdefinitionecsfrontend.json  taskdefinitionevsbackend.json
.github/workflows/: dockerbuild.yaml
.github/workflows/.aws/: taskdefinitionevsbackend.json
backend/: dockerfile  requirements.txt  server.py  transaction_classification.py
frontend/: requirements.txt  ui.py
mlruns/0/: meta.yaml
mlruns/809616161114845260/: meta.yaml
model_training/: feature_engineering.py  training.py
