[tool.poetry]
name = "mlopscasestudy24"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
pandas = "^2.2.0"
fastapi = "^0.109.0"
streamlit = "^1.31.0"
pydantic = "^2.6.0"
python-multipart = "^0.0.6"
requests = "^2.31.0"
requests-toolbelt = "^1.0.0"
seaborn = "^0.13.2"
numpy = "^1.26.3"
logging = "^0.4.9.6"
tqdm = "^4.66.1"
lightgbm = "^4.3.0"
mlflow = "^2.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
